What a nasty fix for the drag and drop bug on firefox 1.5.  this makes me cringe a little.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/pkgs@20141 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/untangle-apache2-config/files/var/www/skins/cammo/css/user.css
+++ b/untangle-apache2-config/files/var/www/skins/cammo/css/user.css
@@ -179,17 +179,19 @@ body.blockpage #header .title
   color: #67686B;
  }
 
-.info-list {
-	margin-top: 10px;
-	margin-bottom: 20px;
-    width:340px;
-    margin-left:auto;
-    margin-right:auto;
-    text-align: left;
-    background-color: #FFFFFF;
+.info-list 
+{
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width:340px;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: left;
+  background-color: #FFFFFF;
 }
-.info-list div{
-    padding:5px 5px 5px 5px;
+.info-list div
+{
+  padding:5px 5px 5px 5px;
 }
 
 body.blockpage #footer
