--- a/untangle-apache2-config/files/var/www/skins/default/css/admin.css
+++ b/untangle-apache2-config/files/var/www/skins/default/css/admin.css
@@ -1086,7 +1086,7 @@ body.wizard .ext-el-mask
   background:transparent url(../images/admin/icon_drag_enabled.png) no-repeat center left;
   width: 100%;
   cursor: move;
-  padding: 2px 0px 2px 24px;
+  padding: 2px 0px 2px 2px;
   }
 
 .draggable-disabled-interface
@@ -1094,7 +1094,7 @@ body.wizard .ext-el-mask
   background:transparent url(../images/admin/icon_drag_disabled.png) no-repeat center left;
   width: 100%;
   cursor: move;
-  padding: 2px 0px 2px 24px;
+  padding: 2px 0px 2px 2px;
   }
 .description {
     font-family:tahoma,arial,helvetica,sans-serif;
